# ndist

./: .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  README.md  fly.toml  input.css  tailwind.config.js
assets/: dev-hotreload-fix.js  robots.txt  smiles-drawer.min.js  smiles-drawer.min.js.old  tailwind.css
assets/icons/: cryptos.avif
assets/images/: bodygen-banner.avif  header-4th.avif  header-christmas.avif  header.avif  logo-black-small.avif  logo-black.avif  nd_banner.avif  nd_banner2.avif  pbio-promo.avif  pheroblend-banner.avif  plabs-dbg.avif  plabs-wbg.avif  plabs.avif  return-banner-2.avif  return-banner-3.avif  return-banner-4.avif  return-banner-5.avif  trustpilot.avif
assets/images/categories/: All.avif  Natural.avif  Nootropics.avif  PBIOs.avif  Peptides.avif  Physical.avif
assets/styling/: about.css  admin.css  main.css  navbar.css
entity/: Cargo.toml
entity/src/: address.rs  affiliate_users.rs  affiliate_withdrawls.rs  api_keys.rs  audit_log.rs  auth_tokens.rs  basket_items.rs  blog_posts.rs  customer_baskets.rs  customers.rs  discounts.rs  group_invite_codes.rs  group_members.rs  groups.rs  lib.rs  manager_sessions.rs  managers.rs  mod.rs  order.rs  order_item.rs  payment.rs  pre_order.rs  prelude.rs  product_categories.rs  product_images.rs  product_variant_stock_item_relations.rs  product_variants.rs  products.rs  regions.rs  sea_orm_active_enums.rs  stock_active_reduce.rs  stock_backorder_active_reduce.rs  stock_batches.rs  stock_dependencies_DEPR.rs  stock_item_relations.rs  stock_items.rs  stock_items_DEPR.rs  stock_location_quantities.rs  stock_locations.rs  stock_preorder_active_reduce.rs  (+5 more)
migration/: Cargo.toml
migration/src/: add_access_groups.rs  add_access_users.rs  add_active_to_reduces.rs  add_auth_tokens.rs  add_basket_locks.rs  add_blog_posts.rs  add_cancelled_payments.rs  add_collections_to_products.rs  add_company_to_address.rs  add_discount_reduce.rs  add_discount_to_order.rs  add_discounts.rs  add_discounts_new.rs  add_groups.rs  add_invite_system.rs  add_mechanism_to_products.rs  add_more_reduces.rs  add_order_item_to_reduces.rs  add_payment_expire.rs  add_payment_failed_at.rs  add_pre_order.rs  add_pre_order_to_order_item.rs  add_processor_url.rs  add_product_metadata.rs  add_stock_active_reduce.rs  add_stock_item_relations.rs  add_stock_location_enabled.rs  add_stock_locations.rs  add_store_settings.rs  add_weight_to_variants.rs  add_working_inventory.rs  add_workinger_inventory.rs  expand_product.rs  expand_variants.rs  fix_discounts_v1.rs  fix_i32_for_stock_items.rs  fix_order_time.rs  fix_reduce_time.rs  fix_stock_items_v2.rs  fix_stock_items_v2_old.rs  (+21 more)
src/: main.rs
src/backend/: api.rs  auth.rs  cache.rs  db.rs  email.rs  entity_conversions.rs  front_entities.rs  media_optimise.rs  meta_cache.rs  meta_injection.rs  mod.rs  payments.rs  server_functions.rs  server_functions.rs.old  shipping_calculations.rs  sitemap.rs  tests.rs.txt
src/backend/server_functions/: auth.rs  basket.rs  blog.rs  discounts.rs  groups.rs  inventory.rs  invite_codes.rs  mod.rs  orders.rs  products.rs  settings.rs  stock_calculations.rs  uploads.rs
src/components/: account_popup.rs  checkout_navbar.rs  collections_grid.rs  footer.rs  header_footer.rs  i18n_popup.rs  mod.rs  navbar.rs  product_card.rs  search_results.rs  seo.rs  shipping_map.rs  smiles_viewer.rs
src/components/admin/: admin_wrapper.rs  mod.rs
src/components/common/: datepicker.rs  mod.rs  select.rs  textarea.rs  textbox.rs  toggle.rs
src/data/i18n/: en-US.ftl
src/data/md/: privacy.md  tos.md
src/i18n/: config.rs  consts.rs  language.rs  mod.rs  user_preferred_language_hook.rs
src/utils/: countries.rs  frontend.rs  mod.rs  shipping.rs
src/views/: about.rs  blog.rs  cart.rs  checkout.rs  checkout_payment.rs  contact.rs  dashboard.rs  faq.rs  home.rs  mod.rs  not_found.rs  order_status.rs  peptide_calculator.rs  policies.rs  shipping.rs
src/views/admin/: admin_analytics.rs  admin_content.rs  admin_customers.rs  admin_dashboard.rs  admin_discounts.rs  admin_groups.rs  admin_inventory.rs  admin_orders.rs  admin_products.rs  admin_settings.rs  admin_users.rs  mod.rs  signin.rs  verify.rs
src/views/admin/sub_pages/: mod.rs  (+10 more)
src/views/collections/: collection.rs  collections.rs  mod.rs
src/views/groups/: group_page.rs  mod.rs
src/views/products/: mod.rs  product.rs
