[package]
name = "noveldist"
version = "1.0.0"
authors = ["peepo5 <72892531+peepo5@users.noreply.github.com>"]
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
dioxus = { version = "0.7.3", features = ["router", "fullstack"] }
dioxus-i18n = "0.5"
dioxus-sdk = { version = "0.7", features = ["storage"] }
sea-orm = { version = "1.1.0", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
    "with-json",
    "with-chrono",
], optional = true }
unic-langid = "0.9.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.69"
markdown = { version = "1.0.0" }
dotenvy = "0.15.7"
tokio = { version = "1", features = ["full"], optional = true }
js-sys = "0.3"
wasm-bindgen = "0.2"
entity = { path = "./entity", optional = true }
supabase-auth = { version = "0.10.13", optional = true }
tower = { version = "0.5.2", optional = true }
tower-http = { version = "0.6.3", features = [
    "auth",
    "request-id",
    "fs",
], optional = true }
http = { version = "1.0", optional = true }
uuid = { version = "1.4", features = ["v4", "serde"], optional = true }
anyhow = "1.0.98"
async-trait = { version = "0.1.88", optional = true }
axum = { version = "0.8", optional = true }
jsonwebtoken = { version = "9.2", optional = true }
base64 = { version = "0.22", optional = true }
url = { version = "2.4" }
moka = { version = "0.12", features = ["future"], optional = true }
# NOTE: dioxus-tw-components 0.1.10 is NOT compatible with Dioxus 0.7.
# Check crates.io for an updated version, or remove/replace it.
# dioxus-tw-components = "0.2"  # uncomment if a 0.7-compatible version is published
reqwest = { version = "0.12.19", features = ["json"], optional = true }
image = { version = "0.24", optional = true }
ravif = { version = "0.11", default-features = false, optional = true }
rgb = { version = "0.8", optional = true }
strum = "0.27"
strum_macros = "0.27"
pulldown-cmark = "0.13.0"
regex = { version = "1.11.1", optional = true }
web-sys = { version = "0.3", features = [
    "Window",
    "Selection",
    "Storage",
    "Location",
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlScriptElement",
    "Node",
    "UrlSearchParams",
    "HtmlImageElement",
] }
futures-channel = "0.3"
tracing = "0.1.41"
futures = { version = "0.3.31", optional = true }
lazy-regex = "3.4.1"
wasm-bindgen-futures = "0.4.50"
rand = { version = "0.9.2", optional = true }
gloo-timers = { version = "0.3.0", features = ["futures"] }
once_cell = { version = "1.21.3", optional = true }
http-body-util = { version = "0.1", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]

[workspace]
members = [".", "entity", "migration"]

[features]
default = []
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = [
    "dioxus/server",
    "dep:sea-orm",
    "dep:tokio",
    "dep:entity",
    "dep:supabase-auth",
    "dep:uuid",
    "dep:axum",
    "dep:async-trait",
    "dep:tower",
    "dep:tower-http",
    "dep:jsonwebtoken",
    "dep:base64",
    "dep:moka",
    "dep:reqwest",
    "dep:image",
    "dep:ravif",
    "dep:rgb",
    "dep:regex",
    "dep:futures",
    "dep:http",
    "dep:rand",
    "dep:once_cell",
    "dep:http-body-util",
]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
